--- a/src/assets/css/memolist.css
+++ b/src/assets/css/memolist.css
@@ -41,20 +41,24 @@
   font-size: 0.95rem;
   color: #555;
 }
-
 .memo_item button {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
   border: none;
-  background: #ff6961;
-  color: white;
-  padding: 5px 8px;
-  border-radius: 5px;
-  font-size: 0.8rem;
+  padding: 5px 15px;
   cursor: pointer;
 }
 
-.memo_item button:hover {
-  background: #ff3b30;
+.memo_actions {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  display: flex;
+  gap: 6px;
+}
+
+.edit_btn {
+  background: #82b883;
+}
+
+.delete_btn {
+  background: #ff6961;
 }
